# Reference-based-colorization-rest-api

./: .gitignore  Dockerfile  Dockerfile.old  README.md  colorize_img.py  cv-dockerfile  docker-entrypoint.sh  gaussian.py  pyproject.toml  requirements-mac.txt  requirements-ubuntu.txt  requirements-window.txt  requirements.txt  server.py
colorization/: main.py  requirements.txt
models/: ColorVidNet.py
utils/: util.py
