[tool.poetry]
name = "reference-based-colorization-rest-api"
version = "0.1.0"
description = ""
authors = ["JLake310 <0310kjy@gmail.com>"]
readme = "README.md"
packages = [{include = "reference_based_colorization_rest_api"}]

[tool.poetry.dependencies]
python = "^3.8"
torch = "1.12.1"
flask = "2.2.2"
torchvision = "0.13.1"
opencv-python = "4.6.0.66"
matplotlib = "3.6.2"
scikit-image = "0.19.3"
numba = "0.56.2"
gunicorn = "^20.1.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
